After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 731202 - Notification disappears when I pause my music
Notification disappears when I pause my music
Status: RESOLVED FIXED
Product: rhythmbox
Classification: Other
Component: general
3.0.x
Other Linux
: Normal normal
: ---
Assigned To: RhythmBox Maintainers
RhythmBox Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-06-04 11:33 UTC by Elad Alfassa
Modified: 2014-12-19 20:44 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Elad Alfassa 2014-06-04 11:33:50 UTC
The notification with playback controls disappears when I pause my music. It didn't do that before.

It's annoying, because when I want to pause my music for a second I do it via the notification, and then I have to switch to the rhythmbox window to start it again, instead of simply clicking play in the notification that is still open.
Comment 1 Jonathan Matthew 2014-06-08 08:51:27 UTC
yeah, the changes I made in 3.0.3 turned out to be a crap idea, and for various reasons I didn't test them enough before the release.  oh well..

commit 03e3a02 is a better attempt
Comment 2 Michael Catanzaro 2014-12-19 17:28:26 UTC
Is it intended that the notification still disappears after pressing pause on an internet radio station (in rhythmbox 3.1, so with the aforementioned commit)?  I used to use that notification for resuming playback.
Comment 3 Jonathan Matthew 2014-12-19 20:44:55 UTC
Radio streams don't get paused, they get stopped, so the playback state is cleared.  If there was still a notification open, pressing play on it wouldn't necessarily start the same stream again, so it would be a bit misleading.