notification: don't close notifications when paused

The previous change wasn't a great idea after all.  Instead, only
close notifications when the playing entry changes to NULL.

https://bugzilla.gnome.org/show_bug.cgi?id=731202